src/components/Layout/index.scss
@import '~@ergeon/core-components/src/components/variables.scss';

.app-layout {
  overflow-x: hidden;
  width: 100%;

  .app-header {
    $header-shadow: 0 2px 10px 0 rgba($black-1, 0.08);

    margin-bottom: $v-64;
    @include tablet {
      margin-bottom: $v-48;
    }

    &-wrapper {
      width: 100%;
      position: fixed;
      top: 0;
      left: 0;
      z-index: $z-index-super-top;

      @media print {
        position: relative;
      }
    }

    &.asPDF .app-header-wrapper {
      position: relative;
    }

    &-shadow {
      box-shadow: $header-shadow;
    }
  }

  .dropdown-menu {
    display: block;
    min-width: unset;
    position: relative;

    .special {
      border-bottom: 1px solid $gray-4;
    }
    .icon {
      margin-right: $h-10;
      height: $v-20;
      min-width: $h-20 + $h-5;
      text-align: center;

      svg path {
        fill: $gray-3;
      }
    }

    .user-name-menu-item {
      display: flex;
      align-items: center;
    }
    .user-full-name {
      white-space: nowrap;
      max-width: $h-120;
    }
    .link {
      height: $v-36;
      width: fit-content;
      padding: 0 $h-10;
      @include phone() {
        height: $v-48;
        padding: 0 $h-5;
        display: flex;
        align-items: center;
        &:hover {
          background: unset;
        }
      }
      img {
        height: $h-20;
        margin-right: $h-5;
        width: $h-20;
      }

      .dropdown-menu--icon {
        @include phone() {
          display: none;
        }
      }
    }

    @include phone() {
      min-width: $h-20;
    }
  }

  .menu {
    @include phone() {
      width: 100%;
    }
    padding: 0;
    min-width: $h-120 + $h-60;
    .menu-item {
      width: inherit;
      margin-right: 0;
      padding-right: $h-20;

      &--title {
        color: $gray-1;
        font-size: $font-label-size;
        text-transform: uppercase;
        margin: $v-6 0;
        padding-left: $h-10;
      }
    }

    .menu-title {
      display: flex;
      align-items: center;

      .orders-item {
        margin-bottom: $v-6;
        svg {
          width: $v-20;
          height: auto;
        }
      }
      .quotes-item {
        svg {
          width: $v-24;
          height: $v-20 + 2;
        }
      }
      .addresses-item {
        svg {
          width: $v-16 + 2;
          height: auto;
          min-width: unset;
          margin-left: 3px;
        }
      }
    }

    @include phone() {
      background: $white;
      min-width: $h-20 * 10;
      left: 0;
      margin-top: $v-6;
      margin-right: 0;

      .menu-item {
        padding: $h-5 $h-10 + 2;
        line-height: $h4-line-height;
        border-radius: unset;
        font-weight: normal;
        font-size: $font-mobile-size;
        margin-left: 0;
      }

      .quotes-item,
      .orders-item,
      .appointments-item,
      .contacts-item,
      .addresses-item,
      .notifications-item {
        margin-left: $v-24;
      }
    }
  }

  .icon-and-arrow {
    display: flex;
    align-items: center;
    justify-content: space-between;
    .dropdown-menu--icon {
      min-width: $v-24;
    }
  }

  .sign-in-link {
    display: flex;
    justify-content: center;
    height: $v-36;
    &:hover {
      color: #333631;
    }
    .link-wrapper {
      padding: $v-6 $h-10;
      @include phone() {
        padding: $v-6 $h-5;
      }
    }
    li {
      border-radius: $corner-default;
      margin: unset;

      @include phone {
        line-height: 20px !important;
      }
    }
    .sign-in-icon {
      vertical-align: middle;
      margin-right: $h-5;
      padding-bottom: 2px;
    }
  }

  .sign-in-icon {
    vertical-align: middle;
    margin-right: $h-5;

    @include phone() {
      margin-right: unset;
    }
  }

  .loaderWrapper {
    @include phone {
      padding-top: unset;
      padding-left: $h-5;
    }
  }

  .active-link {
    svg path {
      fill: $blue-1 !important;
    }
  }

  .phone-number {
    display: flex;
    margin-right: $h-20 - 2;
    @include phone() {
      position: absolute;
      top: $v-12;
      right: 0;
    }

    &__icon {
      background: $blue-1;
      border-radius: 50%;
    }

    &__link {
      font-size: $h4-size;
      padding-left: 8px;
      color: $blue-1;
      font-weight: 600;
      @include phone() {
        font-size: $font-mobile-size;
      }
    }
  }

  .upcoming-features-wrapper {
    position: fixed;
    bottom: $v-20;
    left: $h-20;
    z-index: $z-index-100;
    animation-name: move-it-out;
    animation-duration: 2s;
    animation-delay: 4s;
    animation-timing-function: ease-in-out;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
  }
  @keyframes move-it-out {
    0% {
      bottom: $v-20;
    }
    25% {
      bottom: $v-42 - 2;
    }
    100% {
      bottom: -1 * $h-10 * 50;
      display: none;
    }
  }
}

.SimpleFooter {
  margin-top: 0 !important;
}

.LocationsFooter {
  margin-left: -1 * $h-10 / 2 - 1px;

  @include phone {
    margin-left: 0;
  }
}

